POWR-3442 Fix featured region spacing

--- a/web/themes/custom/cloudy/src/components/card/card.scss
+++ b/web/themes/custom/cloudy/src/components/card/card.scss
@@ -23,7 +23,6 @@
 /* Base card styles - applied to list page items which will later be swapped out for morsel */
 .card {
   display: block; //IE11 set image height when using 'img-fluid' inside card
-  margin-bottom: $cloudy-space-4;
   border-radius: 0;
   .card-img-top {
     background: $white;
@@ -44,11 +43,11 @@
 .card-deck {
   // TODO: remove .card after group homepage featured cards are replaced with Tile component
   .card {
+    margin-bottom: $card-deck-margin * 2;
     @include media-breakpoint-up(sm) {
       display: block; //IE11 set image height when using 'img-fluid' inside card
       flex-basis: calc((100% / 2) - #{$card-deck-margin * 2});
       max-width: calc((100% / 2) - #{$card-deck-margin * 2});
-      margin-bottom: $card-deck-margin * 2;
     }
     @include media-breakpoint-up(lg) {
       flex-basis: calc((100% / 3) - #{$card-deck-margin * 2});
